--- a/tools/paper-benchmarks/Cargo.toml
+++ b/tools/paper-benchmarks/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 automerge = "0.5.11"
 yrs = "0.20.0"
+# loro = { git = "https://github.com/loro-dev/loro.git", branch = "dev" }
+loro = { path = "../../../loro/crates/loro" }
 #cola = { version = "0.4.5", features = ["encode", "serde"] }
 #cola = { path = "../../../../3rdparty/cola", features = ["encode", "serde", "stats"] }
 #cola-nocursor = { path = "../../../../3rdparty/cola", package = "cola" }
@@ -19,12 +21,13 @@ jumprope = { version = "1.1.2", features = ["buffered"] }
 trace-alloc = { path = "../diamond-types/crates/trace-alloc" }
 serde = "1.0.190"
 serde_json = "1.0.107"
-rand = "0.8.5"
+rand = "^0.8.5"
 smallvec = { version = "1.11.1", features = ["serde"] }
 smartstring = { version = "1.0.1", features = ["serde"] }
 argh = "0.1.12"
 
 [features]
+default = ["bench"]
 memusage = ["trace-alloc/memusage"]
 bench = ["dep:criterion"]
 
