--- a/tools/paper-benchmarks/Cargo.toml
+++ b/tools/paper-benchmarks/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 [dependencies]
 automerge = "0.5.11"
 yrs = "0.20.0"
-# loro = { git = "https://github.com/loro-dev/loro.git", branch = "dev" }
-loro = { path = "../../../loro/crates/loro" }
+loro = "1.1.0"
+# loro = { path = "../../../loro/crates/loro" }
 dev-utils = { path = "../../../loro/crates/dev-utils" }
 #cola = { version = "0.4.5", features = ["encode", "serde"] }
 #cola = { path = "../../../../3rdparty/cola", features = ["encode", "serde", "stats"] }
@@ -26,6 +26,7 @@ rand = "^0.8.5"
 smallvec = { version = "1.11.1", features = ["serde"] }
 smartstring = { version = "1.0.1", features = ["serde"] }
 argh = "0.1.12"
+zstd = "0.13"
 
 [features]
 default = ["bench"]
